--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-PORT = 4000
+MONGO_URL=mongodb+srv://coderwithferry:artify.ai@cluster0.ufq4ouw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=4000
