--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-lazy-load-image-component": "^1.6.3",
+    "react-parallax-tilt": "^1.7.291",
     "react-router-dom": "^7.5.0",
     "styled-components": "^6.1.17",
     "tailwindcss": "^4.1.3"
